--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# http://www.gnu.org/software/automake
+# https://laduni74.blogspot.com
 
 Makefile.in
-/ar-lib
-/mdate-sh
-/py-compile
-/test-driver
-/ylwrap
+/pertanian
+/cara-mengolah-lahan
+/membuat-mikoriza
+/pertisida-nabati
+/mengatasi-antraknsa
 
-# http://www.gnu.org/software/autoconf
+# https://laduni74.blogspot.com
 
 autom4te.cache
 /autoscan.log
@@ -26,21 +26,9 @@ autom4te.cache
 /missing
 /stamp-h1
 
-# https://www.gnu.org/software/libtool/
+https://laduni74.blogspot.com
 
 /ltmain.sh
-
-# http://www.gnu.org/software/texinfo
-
-/texinfo.tex
-
-# http://www.gnu.org/software/m4/
-
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
 
 # Generated Makefile 
 # (meta build system like autotools, 
